Fixed heading alignment issue

--- a/src/components/hero/Light/light.scss
+++ b/src/components/hero/Light/light.scss
@@ -117,7 +117,7 @@
   &__form {
     background: $color__branding-blue-light;
     border-radius: 20px;
-    padding: 30px 0 30px 40px;
+    padding: 30px 40px;
     margin-top: 60px;
 
     @include darkmode() {
@@ -131,12 +131,11 @@
 
     .gravityform {
       position: relative;
-      padding-right: 40px;
     }
 
     .gform_button {
       position: absolute;
-      right: 0;
+      right: -40px;
       bottom: 0;
       border: none;
       background: $color__branding-blue;
